[gd_scene load_steps=9 format=3 uid="uid://ppx0mkhv67k6"]

[ext_resource type="Script" path="res://game_scenes/01_make_yog/make_yog.gd" id="1_e2rrb"]
[ext_resource type="FontFile" uid="uid://vriv63llhdyd" path="res://assets/Aegean.ttf" id="3_0roav"]
[ext_resource type="Shader" uid="uid://76asy4soysao" path="res://game_scenes/01_make_yog/fire.tres" id="4_1emc4"]
[ext_resource type="PackedScene" uid="uid://c7ggwfed6pagk" path="res://game_scenes/01_make_yog/boil_pot.tscn" id="4_us5hp"]
[ext_resource type="PackedScene" uid="uid://bvqiad5oamvxy" path="res://game_scenes/01_make_yog/temp_meter.tscn" id="5_sycg0"]
[ext_resource type="Script" path="res://game_scenes/01_make_yog/ice_bath.gd" id="6_ojxcj"]

[sub_resource type="Theme" id="Theme_d8av5"]
Label/constants/outline_size = 8
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("3_0roav")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lkslk"]
shader = ExtResource("4_1emc4")
shader_parameter/transparent = Color(0, 0, 0, 0)
shader_parameter/inner = Color(1, 1, 0.87451, 1)
shader_parameter/outer = Color(1, 0.309804, 0, 1)
shader_parameter/inner_threshold = 0.4
shader_parameter/outer_threshold = 0.15
shader_parameter/soft_edge = 0.0
shader_parameter/center = Vector2(0.5, 1.1)
shader_parameter/OCTAVES = 6

[node name="PourMilk" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2rrb")

[node name="InfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = SubResource("Theme_d8av5")
text = "Milk Remaining: 10.0LÏ„"

[node name="PotContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 64

[node name="BoilPot" parent="PotContainer" instance=ExtResource("4_us5hp")]
unique_name_in_owner = true
layout_mode = 2
burn_amount = 0.0

[node name="FireContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Fire" type="ColorRect" parent="FireContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_lkslk")
custom_minimum_size = Vector2(256, 128)
layout_mode = 2

[node name="TempMeter" parent="." instance=ExtResource("5_sycg0")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -146.5
offset_bottom = 146.5
grow_horizontal = 0

[node name="IceContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(512, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -128.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_ojxcj")

[node name="YogJars" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
